<resources>

    <string name="app_name">StockManager02</string>
    <string name="password">ユーザーパスワード</string>
    <string name="menu_settings">Settings</string>
    <string name="title_login_activity">LoginActivity</string>
    <string name="owner_number">発注者番号</string>
    <string name="guest_name">お客様情報</string>
    <string name="name">お  名  前 : </string>
    <string name="charge_name">ご  担  当 : </string>
    <string name="contact_name">ご連絡先 : </string>
    <string name="date_name">期　　日 : </string>
    <string name="address_name">ご  住  所 : </string>
    <string name="title_client_view_activity">ClientViewActivity</string>
    <string name="guest_setting">お客様設定</string>
    <string name="title_item_view_activity">ItemViewActivity</string>
    <string name="owner_setting">発注設定</string>
    <string name="data_list">商品一覧</string>
    <string name="owner_history">発注履歴</string>
    <string name="title_history_view_activity">HistoryViewActivity</string>

</resources>