<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgtabback"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/btnwhiteback" >
        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical" >
		    <TableRow
		        android:id="@+id/tableRow1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		
		        <TextView
		            android:id="@+id/ownerNumber"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/owner_number"
		            android:textColor="#000000"/>
		
		        <EditText
		            android:id="@+id/editText1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:ems="25"
		            android:textColor="#000000" >
		
		        </EditText>
		    </TableRow>

	    </LinearLayout>
    	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginLeft="6dp"
            android:background="@drawable/imglabel"
            android:orientation="vertical" >

    		<TableLayout
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content" >

    		    <TableRow
    		        android:id="@+id/tableRow2"
    		        android:layout_width="match_parent"
    		        android:layout_height="match_parent" 
    		        android:layout_marginTop="5dp">
    		        <TextView
	    			    android:id="@+id/guestName"
	    			    android:layout_width="wrap_content"
	    			    android:layout_height="wrap_content"
	    			    android:layout_gravity="center_vertical|left"
	    			    android:layout_marginLeft="10dp"
	    			    android:text="@string/guest_name"/>

    		        <Button
    		            android:id="@+id/serchButton"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:layout_gravity="center_vertical|right"
    		            android:layout_marginLeft="15dp"
    		            android:background="@drawable/btnserch"
    		            android:gravity="right" />

    		    </TableRow>
    		    
    		    <Space android:layout_width="match_parent" android:layout_height="20dp"/>

    		    <TableRow
    		        android:id="@+id/tableRow3"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content" >

    		        <TextView 
    		            android:id="@+id/nameView" 
    		            android:layout_width="wrap_content" 
    		            android:layout_height="wrap_content" 
    		            android:layout_gravity="right" 
    		            android:text="@string/name" />

    		        <TextView
    		            android:id="@+id/companyName"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:text="CompanyName" />

    		    </TableRow>

    		    <Space android:layout_width="match_parent" android:layout_height="10dp"/>
    		    
    		    <TableRow
    		        android:id="@+id/tableRow4"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content" >

    		        <TextView
    		            android:id="@+id/chargeNameView"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:layout_gravity="right" 
    		            android:text="@string/charge_name" />

    		        <TextView
    		            android:id="@+id/chargeName"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:text="ChargeName" />

   		        </TableRow>
   		        
    		    <Space android:layout_width="match_parent" android:layout_height="10dp"/>

    		    <TableRow
    		        android:id="@+id/tableRow5"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content" >
    		        <TextView
    		            android:id="@+id/contactNameView"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:layout_gravity="right" 
    		            android:text="@string/contact_name" />

    		        <TextView
    		            android:id="@+id/contactName"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:text="ContactName" />
    		    </TableRow>
    		    
    		    <Space android:layout_width="match_parent" android:layout_height="10dp"/>
    		    
    		    <TableRow
    		        android:id="@+id/tableRow6"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content" >
    		        <TextView
    		            android:id="@+id/dateNameView"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:layout_gravity="right" 
    		            android:text="@string/date_name" />

    		        <TextView
    		            android:id="@+id/dateName"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:text="DateName" />
    		    </TableRow>
    		    
    		    <Space android:layout_width="match_parent" android:layout_height="10dp"/>
    		    
    		    <TableRow
    		        android:id="@+id/tableRow7"
    		        android:layout_width="wrap_content"
    		        android:layout_height="wrap_content" >
    		        <TextView
    		            android:id="@+id/addressView"
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:layout_gravity="right" 
    		            android:text="@string/address_name" />

    		        <LinearLayout
    		            android:layout_width="wrap_content"
    		            android:layout_height="wrap_content"
    		            android:orientation="vertical" >

    		            <TextView
    		                android:id="@+id/postName"
    		                android:layout_width="wrap_content"
    		                android:layout_height="wrap_content"
    		                android:text="PostNames" />

	    		        <TextView
	    		            android:id="@+id/addressName"
	    		            android:layout_width="wrap_content"
	    		            android:layout_height="match_parent"
	    		            android:lines="3"
	    		            android:singleLine="false"
	    		            android:text="AddressName" />

    		        </LinearLayout>

    		    </TableRow>
    		</TableLayout>
		    
       	</LinearLayout>
    
    </LinearLayout>
    

</LinearLayout>